--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "crypto-browserify": "^3.12.1",
+    "crypto-hash": "^3.1.0",
     "crypto-js": "^4.2.0",
     "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
